Fix inline code word wrap

--- a/webview/main.css
+++ b/webview/main.css
@@ -118,6 +118,7 @@ ul, ol {
 code {
     color: var(--dark-gray);
     font-family: monospace;
+    word-wrap: break-word;
 }
 
 pre {
